--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
         a:hover {
             text-decoration: underline;
         }
+        
+        p {
+            padding: 8px;
+        }
     </style>
 </head>
 
