add class p header

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             text-decoration: underline;
         }
         
-        p {
+        p.header {
             padding: 8px;
             text-align: center;
         }
@@ -83,11 +83,11 @@
 <body>
     <div class="header">
         <h1>Endangered Animals in the Philippines</h1>
-        <p>Philippines is not just beautiful islands and mountains, but rich in natural resources and diverse wild life species. But with wildlife diversity, there are also few that faces extinction, and here are some of them, </p>
+        <p class="p-header">Philippines is not just beautiful islands and mountains, but rich in natural resources and diverse wild life species. But with wildlife diversity, there are also few that faces extinction, and here are some of them, </p>
     </div>
 
     <div class="content">
-        <p>The Department of Environment and Natural Resources issued an administrative order in 2007 that produced a nationwide list of threatened plant species, showing that 99 species are critically endangered, 187 endangered, 176 vulnerable, and 64 threatened.</p>
+        <p class="p-header">The Department of Environment and Natural Resources issued an administrative order in 2007 that produced a nationwide list of threatened plant species, showing that 99 species are critically endangered, 187 endangered, 176 vulnerable, and 64 threatened.</p>
 
         <div class="animal">
             <h2>1. Philippine Eagle (Pithecophaga jefferyi)</h2>
