--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             text-decoration: underline;
         }
         
-        p.header {
+        .p-header {
             padding: 8px;
             text-align: center;
         }
